fix backdrop blur on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -123,6 +123,7 @@ header {
 nav {
   height: 6em;
   background-color: rgba(100, 100, 120, .2);
+  -webkit-backdrop-filter: blur(40px);
   backdrop-filter: blur(40px);
   grid-column: 3 / span 2;
   display: flex;
@@ -280,7 +281,6 @@ a:hover .explore {
   .left-content {
     text-align: center;
   }
-
 }
 
 /* NAVIGATION MOBILE */
@@ -320,6 +320,7 @@ a:hover .explore {
     width: 70%;
     height: 100%;
     align-items: flex-start;
+    -webkit-backdrop-filter: blur(0);
     backdrop-filter: blur(0);
   }
 
@@ -356,6 +357,7 @@ a:hover .explore {
     opacity: 1;
     transition: transform 250ms ease-in-out 50ms;
     transform-origin: right;
+    -webkit-backdrop-filter: blur(40px);
     backdrop-filter: blur(40px);
   }
 
@@ -411,5 +413,4 @@ a:hover .explore {
     transform-origin: center;
     transition: all ease-in-out .2s;
   }
-
 }
